--- a/custom_gpt_buttons.html
+++ b/custom_gpt_buttons.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
@@ -67,53 +67,72 @@
 </head>
 
 <body>
-    <h1>Custom Camera-to-GPT Buttons</h1>
-    <p>Definisci i tuoi pulsanti: scegli il nome, il prompt e invia la foto a ChatGPT o Azure!</p>
 
-    <h2>Impostazioni</h2>
+    <h1 id="main-title">Custom Camera-to-GPT Buttons</h1>
+    <p id="page-desc">Definisci i tuoi pulsanti: scegli il nome, il prompt e invia la foto a ChatGPT o Azure!</p>
+
+    <h2 id="settings-heading">Impostazioni</h2>
     <div style="margin-bottom:1em;">
         <label for="gptService">Service:</label>
-        <select id="gptService">
+        <select id="gptService" aria-labelledby="settings-heading gptService">
             <option value="chatgpt" selected>ChatGPT</option>
             <option value="azure">Azure GPT</option>
         </select>
     </div>
     <div id="chatgptFields">
-        <input type="password" id="apiKey" placeholder="OpenAI API Key">
+        <label for="apiKey" class="visually-hidden">OpenAI API Key</label>
+        <input type="password" id="apiKey" placeholder="OpenAI API Key" autocomplete="off">
     </div>
     <div id="azureFields" style="display:none;">
-        <input type="password" id="azureApiKey" placeholder="Azure OpenAI API Key">
-        <input type="password" id="azureEndpoint" placeholder="Azure OpenAI Endpoint">
+        <label for="azureApiKey" class="visually-hidden">Azure OpenAI API Key</label>
+        <input type="password" id="azureApiKey" placeholder="Azure OpenAI API Key" autocomplete="off">
+        <label for="azureEndpoint" class="visually-hidden">Azure OpenAI Endpoint</label>
+        <input type="password" id="azureEndpoint" placeholder="Azure OpenAI Endpoint" autocomplete="off">
     </div>
 
     <div style="margin-bottom:1em;">
         <label for="cameraSelect">Camera:</label>
-        <select id="cameraSelect"></select>
-        <button id="refreshCamerasBtn">Aggiorna fotocamere</button>
+        <select id="cameraSelect" aria-label="Seleziona fotocamera"></select>
+        <button id="refreshCamerasBtn" type="button">Aggiorna fotocamere</button>
     </div>
 
-    <video id="video" autoplay playsinline></video>
-    <canvas id="canvas" style="display:none;"></canvas>
+    <video id="video" autoplay playsinline aria-label="Anteprima fotocamera" tabindex="0"></video>
+    <canvas id="canvas" style="display:none;" aria-hidden="true"></canvas>
 
     <div style="margin-bottom:1em;">
       <label for="systemPrompt"><b>System prompt comune:</b></label><br>
-      <textarea id="systemPrompt" rows="2" placeholder="System prompt da inviare a GPT" style="width:90%;max-width:800px;"></textarea>
+      <textarea id="systemPrompt" rows="2" placeholder="System prompt da inviare a GPT" style="width:90%;max-width:800px;" aria-describedby="systemPrompt-desc"></textarea>
+      <span id="systemPrompt-desc" class="visually-hidden">Prompt che verrà inviato come istruzione di sistema a GPT</span>
     </div>
 
-    <h2>Pulsanti personalizzati</h2>
-    <div id="customButtons"></div>
-    <h3>Crea nuovo pulsante</h3>
-    <form id="newButtonForm" style="margin-bottom:2em;">
+    <h2 id="custom-btns-heading">Pulsanti personalizzati</h2>
+    <div id="customButtons" aria-labelledby="custom-btns-heading"></div>
+    <h3 id="create-btn-heading">Crea nuovo pulsante</h3>
+    <form id="newButtonForm" style="margin-bottom:2em;" aria-labelledby="create-btn-heading">
         <div class="custom-btn-row">
-            <input id="newBtnName" placeholder="Nome pulsante" required>
+            <label for="newBtnName" class="visually-hidden">Nome pulsante</label>
+            <input id="newBtnName" placeholder="Nome pulsante" required autocomplete="off">
+            <label for="newBtnPrompt" class="visually-hidden">Prompt da inviare a GPT</label>
             <textarea id="newBtnPrompt" placeholder="Prompt da inviare a GPT" rows="2" required></textarea>
             <button type="submit">Aggiungi</button>
         </div>
     </form>
 
-    <h2>Risposta</h2>
-    <div id="response"></div>
-    <div id="debugPrompt" style="margin-top:10px; color:#888; font-size:0.95em; white-space:pre-wrap;"></div>
+    <h2 id="response-heading">Risposta</h2>
+    <div id="response" role="status" aria-live="assertive" aria-atomic="true" tabindex="-1" aria-labelledby="response-heading" style="outline:none;"></div>
+    <div id="debugPrompt" style="margin-top:10px; color:#888; font-size:0.95em; white-space:pre-wrap;" aria-hidden="true"></div>
+    <style>
+      .visually-hidden {
+        position: absolute !important;
+        height: 1px; width: 1px;
+        overflow: hidden;
+        clip: rect(1px, 1px, 1px, 1px);
+        white-space: nowrap;
+        border: 0;
+        padding: 0;
+        margin: 0;
+      }
+    </style>
 
     <script>
         // --- Camera logic ---
@@ -227,6 +246,7 @@
                 row.style.justifyContent = 'flex-start';
                 const button = document.createElement('button');
                 button.textContent = btn.name;
+                button.setAttribute('aria-label', `Invia prompt personalizzato: ${btn.name}`);
                 button.onclick = () => handleCustomButton(btn.prompt);
                 button.style.width = '140px';
                 button.style.minWidth = '140px';
@@ -242,6 +262,7 @@
                 const editBtn = document.createElement('button');
                 editBtn.textContent = '✏️';
                 editBtn.title = 'Modifica';
+                editBtn.setAttribute('aria-label', `Modifica pulsante ${btn.name}`);
                 editBtn.style.width = '32px';
                 editBtn.style.minWidth = '32px';
                 editBtn.style.height = '32px';
@@ -254,12 +275,15 @@
                   const nameInput = document.createElement('input');
                   nameInput.value = btn.name;
                   nameInput.style.width = '120px';
+                  nameInput.setAttribute('aria-label', 'Modifica nome pulsante');
                   const promptInput = document.createElement('textarea');
                   promptInput.value = btn.prompt;
                   promptInput.rows = 2;
                   promptInput.style.width = '250px';
+                  promptInput.setAttribute('aria-label', 'Modifica prompt pulsante');
                   const saveBtn = document.createElement('button');
                   saveBtn.textContent = 'Salva';
+                  saveBtn.setAttribute('aria-label', 'Salva modifiche');
                   saveBtn.onclick = () => {
                     const newName = nameInput.value.trim();
                     const newPrompt = promptInput.value.trim();
@@ -271,6 +295,7 @@
                   };
                   const cancelBtn = document.createElement('button');
                   cancelBtn.textContent = 'Annulla';
+                  cancelBtn.setAttribute('aria-label', 'Annulla modifica');
                   cancelBtn.onclick = () => renderCustomButtons();
                   row.appendChild(nameInput);
                   row.appendChild(promptInput);
@@ -282,6 +307,7 @@
                 const delBtn = document.createElement('button');
                 delBtn.textContent = '🗑️';
                 delBtn.title = 'Elimina';
+                delBtn.setAttribute('aria-label', `Elimina pulsante ${btn.name}`);
                 delBtn.style.width = '32px';
                 delBtn.style.minWidth = '32px';
                 delBtn.style.height = '32px';
@@ -380,7 +406,11 @@
             canvas.height = video.videoHeight;
             context.drawImage(video, 0, 0, canvas.width, canvas.height);
             const imageData = canvas.toDataURL("image/jpeg");
+            // Accessibilità: resetta focus e annuncia lo stato
             responseDiv.innerText = "Elaborazione in corso...";
+            responseDiv.setAttribute('aria-busy', 'true');
+            responseDiv.setAttribute('tabindex', '-1');
+            responseDiv.focus();
             // Prompt system personalizzato
             const systemPrompt = systemPromptInput.value.trim() || "Sei un assistente visivo che aiuta l'utente a interpretare immagini tramite GPT.";
             // Prompt utente personalizzato
@@ -390,11 +420,19 @@
             ];
             debugPrompt.innerText = `System prompt:\n${systemPrompt}\n\nUser message content:\n` + userContent.map(part => part.type === 'text' ? part.text : '[image]').join('\n---\n');
             const resultText = await sendGptRequest({ gptService, apiKey, endpoint, systemPrompt, userContent });
+            responseDiv.setAttribute('aria-busy', 'false');
             if (!resultText) {
                 responseDiv.innerText = 'Nessuna risposta valida da ' + (gptService === 'chatgpt' ? 'OpenAI.' : 'Azure.');
             } else {
-                responseDiv.innerText = resultText;
+                // Inserisci la risposta in modo accessibile
+                // Sostituisci i ritorni a capo con <br> per screen reader e mantieni la formattazione
+                responseDiv.innerHTML = resultText
+                  .replace(/</g, '&lt;')
+                  .replace(/>/g, '&gt;')
+                  .replace(/\n/g, '<br>');
             }
+            // Forza il focus per l'annuncio immediato da parte di screen reader
+            responseDiv.focus();
         }
 
         // --- Esporta/Importa configurazione bottoni personalizzati ---
