--- a/custom_gpt_buttons.html
+++ b/custom_gpt_buttons.html
@@ -9,13 +9,24 @@
             font-family: sans-serif;
             text-align: center;
             padding: 20px;
+            background: #fff;
+            color: #2C2735;
+        }
+
+        a {
+            color: #E85D26;
+        }
+
+        h1, h2, h3 {
+            color: #E85D26;
         }
 
         video {
             width: 90%;
             max-width: 480px;
-            border: 2px solid black;
+            border: 2px solid #E85D26;
             border-radius: 8px;
+            background: #fff;
         }
 
         #response {
@@ -25,6 +36,11 @@
             max-width: 800px;
             margin-inline: auto;
             min-height: 2.5em;
+            background: #fff;
+            color: #2C2735;
+            border: 1px solid #E85D26;
+            border-radius: 6px;
+            padding: 10px;
         }
 
         .spinner {
@@ -32,7 +48,7 @@
             width: 2em;
             height: 2em;
             border: 0.3em solid #ccc;
-            border-top: 0.3em solid #333;
+            border-top: 0.3em solid #E85D26;
             border-radius: 50%;
             animation: spin 1s linear infinite;
             vertical-align: middle;
@@ -51,6 +67,25 @@
             margin: 5px;
             width: 90%;
             max-width: 800px;
+            border-radius: 4px;
+            border: 1px solid #2C2735;
+            background: #fff;
+            color: #2C2735;
+        }
+        button {
+            background: #E85D26;
+            color: #fff;
+            border: none;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+        button:hover, button:focus {
+            background: #b43e13;
+            outline: 2px solid #2C2735;
+        }
+        select:focus, input:focus, textarea:focus {
+            outline: 2px solid #E85D26;
         }
 
         .custom-btn-row {
@@ -66,17 +101,26 @@
             width: auto;
         }
 
+        .custom-btn-row button {
+            background: #2C2735;
+            color: #fff;
+        }
+        .custom-btn-row button:hover, .custom-btn-row button:focus {
+            background: #E85D26;
+            color: #fff;
+        }
+
         footer {
             position: fixed;
             left: 0;
             right: 0;
             bottom: 0;
-            background: #f8f8f8;
-            border-top: 1px solid #ccc;
+            background: #2C2735;
+            border-top: 2px solid #E85D26;
             padding: 10px 0;
             text-align: center;
             font-size: 0.95em;
-            color: #444;
+            color: #fff;
             z-index: 1000;
         }
     </style>
@@ -121,7 +165,13 @@
       <span id="systemPrompt-desc" class="visually-hidden">Prompt che verrà inviato come istruzione di sistema a GPT</span>
     </div>
 
-    <h2 id="custom-btns-heading">Pulsanti personalizzati</h2>
+    <h2 id="custom-btns-heading">Configurazione pulsanti</h2>
+    <div id="config-actions" style="margin-bottom:1em; display:flex; gap:10px; justify-content:center;">
+      <button id="exportConfigBtn" type="button">Esporta configurazione</button>
+      <button id="importConfigBtn" type="button">Importa configurazione</button>
+      <input id="importConfigInput" type="file" accept=".json,application/json" style="display:none;" />
+    </div>
+    <h3 id="create-btn-heading">Pulsanti personalizzati</h3>
     <div id="customButtons" aria-labelledby="custom-btns-heading"></div>
     <h3 id="create-btn-heading">Crea nuovo pulsante</h3>
     <form id="newButtonForm" style="margin-bottom:2em;" aria-labelledby="create-btn-heading">
@@ -262,7 +312,7 @@
                 row.style.justifyContent = 'flex-start';
                 const button = document.createElement('button');
                 button.textContent = btn.name;
-                button.setAttribute('aria-label', `Invia prompt personalizzato: ${btn.name}`);
+                button.setAttribute('aria-label', `${btn.name}`);
                 button.onclick = () => handleCustomButton(btn.prompt);
                 button.style.width = '140px';
                 button.style.minWidth = '140px';
@@ -450,16 +500,20 @@
                   .replace(/</g, '&lt;')
                   .replace(/>/g, '&gt;')
                   .replace(/\n/g, '<br>');
-                responseDiv.setAttribute('aria-label', resultText);
+                // Aggiorna aria-label con tutto il testo, senza tag HTML
+                responseDiv.setAttribute('aria-label', resultText.replace(/<[^>]+>/g, ''));
+                // Forza il ricalcolo e il riascolto da parte degli screen reader
+                responseDiv.setAttribute('aria-live', 'off');
+                void responseDiv.offsetWidth; // trigger reflow
+                responseDiv.setAttribute('aria-live', 'assertive');
+                responseDiv.focus();
             }
-            responseDiv.setAttribute('aria-live', 'assertive');
-            responseDiv.focus();
         }
 
         // --- Esporta/Importa configurazione bottoni personalizzati ---
-        const exportBtn = document.createElement('button');
-        exportBtn.textContent = 'Esporta configurazione';
-        exportBtn.style.margin = '5px';
+        const exportBtn = document.getElementById('exportConfigBtn');
+        const importBtn = document.getElementById('importConfigBtn');
+        const importInput = document.getElementById('importConfigInput');
         exportBtn.onclick = function() {
           const exportObj = {
             systemPrompt: systemPromptInput.value,
@@ -473,13 +527,6 @@
           dlAnchor.click();
           document.body.removeChild(dlAnchor);
         };
-        const importBtn = document.createElement('button');
-        importBtn.textContent = 'Importa configurazione';
-        importBtn.style.margin = '5px';
-        const importInput = document.createElement('input');
-        importInput.type = 'file';
-        importInput.accept = '.json,application/json';
-        importInput.style.display = 'none';
         importBtn.onclick = function() {
           importInput.click();
         };
@@ -515,12 +562,8 @@
           };
           reader.readAsText(file);
         };
-        // Inserisci i pulsanti sopra la lista dei bottoni personalizzati
-        customButtonsDiv.parentNode.insertBefore(exportBtn, customButtonsDiv);
-        customButtonsDiv.parentNode.insertBefore(importBtn, customButtonsDiv);
-        document.body.appendChild(importInput);
     </script>
-    <footer style="position:fixed;left:0;right:0;bottom:0;background:#f8f8f8;border-top:1px solid #ccc;padding:10px 0;text-align:center;font-size:0.95em;color:#444;z-index:1000;">
+    <footer style="position:fixed;left:0;right:0;bottom:0;background:#2C2735;border-top:2px solid #E85D26;padding:10px 0;text-align:center;font-size:0.95em;color:#fff;z-index:1000;">
       <b>Privacy Notice:</b> ASPHI Onlus, who hosts this page, never receives or stores any user data. All data remains in your browser and is only sent directly to the selected AI service (OpenAI or Azure) when you make a request.
     </footer>
 </body>
