--- a/custom_gpt_buttons.html
+++ b/custom_gpt_buttons.html
@@ -4,155 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Custom GPT Camera Buttons</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            text-align: center;
-            padding: 20px;
-            background: #fff;
-            color: #2C2735;
-        }
-
-        a {
-            color: #E85D26;
-        }
-
-        h1, h2, h3 {
-            color: #E85D26;
-        }
-
-        video {
-            width: 90%;
-            max-width: 480px;
-            border: 2px solid #E85D26;
-            border-radius: 8px;
-            background: #fff;
-        }
-
-        #response {
-            margin-top: 20px;
-            white-space: pre-wrap;
-            text-align: left;
-            max-width: 800px;
-            margin-inline: auto;
-            min-height: 2.5em;
-            background: #fff;
-            color: #2C2735;
-            border: 1px solid #E85D26;
-            border-radius: 6px;
-            padding: 10px;
-        }
-
-        .spinner {
-            display: inline-block;
-            width: 2em;
-            height: 2em;
-            border: 0.3em solid #ccc;
-            border-top: 0.3em solid #E85D26;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            vertical-align: middle;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        textarea,
-        input,
-        button,
-        select {
-            padding: 8px;
-            font-size: 1em;
-            margin: 5px;
-            width: 90%;
-            max-width: 800px;
-            border-radius: 4px;
-            border: 1px solid #2C2735;
-            background: #fff;
-            color: #2C2735;
-        }
-        button {
-            background: #E85D26;
-            color: #fff;
-            border: none;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background 0.2s;
-        }
-        button:hover, button:focus {
-            background: #b43e13;
-            outline: 2px solid #2C2735;
-        }
-        select:focus, input:focus, textarea:focus {
-            outline: 2px solid #E85D26;
-        }
-
-        .custom-btn-row {
-            display: flex;
-            gap: 10px;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 10px;
-        }
-
-        .custom-btn-row input,
-        .custom-btn-row textarea {
-            width: auto;
-        }
-
-        .custom-btn-row button {
-            background: #2C2735;
-            color: #fff;
-        }
-        .custom-btn-row button:hover, .custom-btn-row button:focus {
-            background: #E85D26;
-            color: #fff;
-        }
-
-        footer {
-            position: fixed;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: #2C2735;
-            border-top: 2px solid #E85D26;
-            padding: 10px 0;
-            text-align: center;
-            font-size: 0.95em;
-            color: #fff;
-            z-index: 1000;
-        }
-
-        /* Stili per la modale di salvataggio configurazione */
-        #saveConfigModal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background: rgba(44,39,53,0.7);
-            z-index: 2000;
-            align-items: center;
-            justify-content: center;
-        }
-        #saveConfigModal > div {
-            background: #fff;
-            color: #2C2735;
-            padding: 2em 1.5em 1.5em 1.5em;
-            border-radius: 10px;
-            max-width: 95vw;
-            width: 400px;
-            box-shadow: 0 4px 24px #0003;
-            outline: 2px solid #E85D26;
-            position: relative;
-        }
-        #saveConfigModal h2 {
-            margin-top: 0;
-            color: #E85D26;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -621,7 +473,7 @@
           alert('Configurazione salvata!');
         };
     </script>
-    <footer style="position:fixed;left:0;right:0;bottom:0;background:#2C2735;border-top:2px solid #E85D26;padding:10px 0;text-align:center;font-size:0.95em;color:#fff;z-index:1000;">
+    <footer>
       <b>Privacy Notice:</b> ASPHI Onlus, who hosts this page, never receives or stores any user data. All data remains in your browser and is only sent directly to the selected AI service (OpenAI or Azure) when you make a request.
     </footer>
 </body>
